Logtalk/examples/errors/invargdir.lgt

:- object(invargdir).


	:- public(1234).


:- end_object.
